# ProgrammationConcurrente_Group6

./: .gitignore  Budget projet programmation concurrente.xlsx  CMakeLists.txt  DESCRIPTION DES DIIFERENTS DESIGN PATTERN UTILISES.docx  Rapport sur les diffÃ©rents design pattern utilisÃ©s.docx  database config.txt  generate_pro.py  kitchenwindow.cpp  kitchenwindow.h  main.cpp  masterchef_info.pro  planning prev (1).gan  planning réel.gan  ressources.qrc  restauranttab.cpp  restauranttab.h
LIVRABLES_FINAUX/: Rapport_design_pattern_utilisés_groupe_6.docx
LIVRABLES_FINAUX/bdd/: MCD.drawio  database config.txt  database init.txt
LIVRABLES_FINAUX/diagrammes/: Diagrame_de_séquence_groupe_6.drawio  Diagramme_classe_groupe_6.drawio  diagrame d'activité final .vpp  diagramme composant.vpp
assets/: cui.avif  kit.avif  maitre.avif  planch.avif  planch1.avif
database/: CMakeLists.txt  chefcontroller.cpp  chefcontroller.h  chefmodel.cpp  chefmodel.h  chefview.cpp  chefview.h  cookmodel.cpp  cookmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mysqlconnection.h  order.h  recipe.cpp  recipe.h
diagrammes/: diagrame d'activité final .vpp
src/: main.cpp
src/Controllers/classDeclaration/: CharacterElementController.h  DBController.h  DinningRoomController.h  KitchenController.h  MainController.h  MotionlessElementController.h  MoveController.h  SharedOrdersQueue.h  SocketController.h
src/Controllers/classDefinition/: CharacterElementController.cpp  DBController.cpp  DinningRoomController.cpp  KitchenController.cpp  MainController.cpp  MotionlessElementController.cpp  MoveController.cpp  SharedOrdersQueue.cpp  SocketController.cpp
src/Enums/: RecipeName.h  RecipeType.h  RecipesNames.h  RecipesTypes.h
src/Factories/classDeclaration/: ClientGroupFactory.h  ServerFactory.h  TableFactory.cpp  TableFactory.h
src/Factories/classDefinition/: ClientGroupFactory.cpp  ServerFactory.cpp  TableFactory.cpp
src/Models/: MobilePointModel.cpp  MobilePointModel.h
src/Models/classDeclaration/: Butler.h  CardModel.h  Chief.h  ClientGroupCreator.h  ClientModel.h  Cook.h  DinningRoom.h  DirtyDishesStorage.h  DishwasherModel.h  Human.h  KitchenAssistant.h  KitchenCounter.h  MaterialModel.h  Order.h  Recipe.h  RestaurantDiver.h  RoomClerk.h  Server.h  StorageModel.h  Table.h  UstensilModel.h  WashingMachine.h  headWaiter.h
src/Models/classDefinition/: Butler.cpp  CardModel.cpp  Chief.cpp  ClientGroupCreator.cpp  ClientModel.cpp  Cook.cpp  DinningRoom.cpp  DirtyDishesStorage.cpp  DishwasherModel.cpp  HeadWaiter.cpp  Human.cpp  KitchenAssistant.cpp  KitchenCounter.cpp  MaterialModel.cpp  Order.cpp  Recipe.cpp  RestaurantDiver.cpp  RoomClerk.cpp  Server.cpp  StorageModel.cpp  Table.cpp  UstensilModel.cpp  WashingMachine.cpp
src/Models/commonModels/classDeclaration/: CardModel.h  ClientGroupModel.h  ClientModel.h  DinningRoom.h  MobileElementModel.h  Order.h  Recipe.h
src/Models/commonModels/classDefinition/: CardModel.cpp  ClientGroupCreator.cpp  ClientGroupModel.cpp  ClientModel.cpp  DinningRoom.cpp  Human.cpp  MobileElementModel.cpp  Order.cpp  Recipe.cpp
src/Models/dinningRoomModels/classDeclaration/: Butler.h  RoomClerk.h  Server.h  Table.h  headWaiter.h
src/Models/dinningRoomModels/classDefinition/: Butler.cpp  HeadWaiter.cpp  RoomClerk.cpp  Server.cpp  Table.cpp
src/Models/kitchenModels/classDeclaration/: Chief.h  CookModel.h  DirtyDishesStorage.h  KitchenAssistant.h  KitchenCounter.h  StorageModel.h  UstensilModel.h  WashingMachine.h
src/Models/kitchenModels/classDefinition/: Chief.cpp  CookModel.cpp  DirtyDishesStorage.cpp  RestaurantDiver.cpp  StorageModel.cpp  UstensilModel.cpp  WashingMachine.cpp
src/Observer/: Observable.cpp  Observable.h  Observer.cpp  Observer.h
src/Structs/: Attribution.h  OrderRecipe.h  PointStruct.h
src/Utilities/: ThreadPoolManager.cpp  ThreadPoolManager.h
src/Views/: CommonPointView.cpp  CommonPointView.h  MainView.cpp  MainView.h  MobilePointView.cpp  MobilePointView.h  main.cpp
src/Views/SetupView/: SetupView.cpp  SetupView.h
src/Views/dashboardView/: Dashboard.cpp  Dashboard.h
src/Views/dinningRoomView/: DinningRoomView.cpp  DinningRoomView.h
src/Views/kitchenView/: KitchenView.cpp  KitchenView.h
src/kitchen/: chefcontroller.cpp  chefcontroller.h  chefmodel.cpp  chefmodel.h  chefview.cpp  chefview.h  cookmodel.cpp  cookmodel.h  main.cpp  masterchef.db  mysqlconnection.h  order.h  recipe.cpp  recipe.h  ustensilmodel.cpp  ustensilmodel.h
